# cph

./: .gitignore  CMakeLists.txt  FindLibgcrypt.cmake  LICENSE  Makefile  README.md  analyze  analyzer.sh  configure  cph.make  cph_server.py  install  log  package  premake4.lua  psafe  pysafe  readme.md  setup  test  timer
analysis/: analyze  analyzer.sh  log  timer
crap/: pysafe
pyph/: pyph.py
src/: argparse.c  argparse.h  cph.c  cph.h  cph_args.c  cph_args.h  cph_clipboard_handler.c  cph_clipboard_handler.h  cph_input_handler.c  cph_input_handler.h  cph_io.c  cph_io.h  cph_key.c  cph_key.h  cph_memory.c  cph_memory.h
src/core/: #psafe.c#  a.out  arrayOperations.c  arrayOperations.h  clipboardHandler.c  clipboardHandler.h  cph.c  cph.h  cph_clipboard_handler.c  cph_input_handler.c  cph_input_handler.h  cph_key.c  cph_key.h  literalOperations.c  literalOperations.h  psafe.c  psafe.h  psafeClipboardHandler.c  psafeClipboardHandler.h  psafeInputHandler.c  psafeInputHandler.h  psafeKey.c  psafeKey.h  psafePasswordHandler.c  psafePasswordHandler.h
src/test/: a.out  arrayOperationsTests.c  arrayOperationsTests.h  literalOperationsTests.c  literalOperationsTests.h  psafeKeyTest.c  psafeKeyTest.h  psafeKeyTests.c  psafeKeyTests.h  psafeTest.c  psafeTest.h  psafeTestSuite.c  psafeTestSuite.h  psafeTests.c  psafeTests.h
time/: 1  1000  10000  100000  50000
